--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,9 @@
                 <a class="nav-link" href="/features">
                     <i class="fas fa-star me-1"></i>Features
                 </a>
+                <a class="nav-link" href="/port-monitor">
+                    <i class="fas fa-eye me-1"></i>Port Monitor
+                </a>
                 <a class="nav-link" href="/api/health">
                     <i class="fas fa-heartbeat me-1"></i>API Status
                 </a>
